--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<h1>
+		 "My current favourite song is [1]" 	
+		</h1>
+		<a href="https://www.youtube.com">Visit youtube</a>
+
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
